@@ -1,0 +1,2 @@
+<%= f.label field.attribute %>
+<%= f.text_field field.attribute %>
