@@ -1,0 +1,7 @@
+require "administrate/fields/base"
+
+class <%= class_name %>Field < Administrate::Field::Base
+  def to_s
+    data
+  end
+end
